Refactor and enhance Cup Pyramid Generator application. Updated project documentation in `.req.md` and `README.md` to reflect new features and design guidelines. Replaced old assets with new SVG images for cup colors and orientations. Reorganized JavaScript files, introducing `app.js`, `utils.js`, and `test.js` for improved modularity and functionality. Removed deprecated files and styles, ensuring a cleaner codebase.

--- a/.req.md
+++ b/.req.md
@@ -1,18 +1,83 @@
-użytkownik na stronie układał by układ z kubeczków, a po ułożeniu można by go pobrać do pdfa
+Oto szczegółowa instrukcja do zbudowania aplikacji do projektowania piramid z kubeczków:
 
-Na podstawie tego wzoru dzieci będą mogły ten układ odwzorować w realu ( na podstawie wydruku z pdf, lub patrząc na ekran komputera)
+# Aplikacja web do Projektowania Piramid z Kubeczków
 
-określamy rozmiar wzoru 10x10 / 12x12 / 14x14 / 16x16/ 18x18/ 20x20
+## Cel Aplikacji
+Stworzenie interaktywnego narzędzia, które pozwala użytkownikom na:
+- Projektowanie piramid z kubeczków w różnych rozmiarach
+- Eksport projektu do pliku PDF
+- Fizycznie wierne odwzorowanie projektu przy użyciu kubeczków
 
-dole umieszczamy dwa rzędy kubeczków ( jeden dnem na dole, drugi rząd dnem do góry) w 10 kolorach (grafiki kubeczków mamy)
+## Wymagania Funkcjonalne
 
- 
-Linie siatki są niewidoczne, a dodatkowo muszą być wstawione pola połówkowe, czyli takie żeby kubeczek z wyższego rzędu mógł stać pomiędzy dwoma, ale też żeby mógł stać jeden nad drugim
+### 1. Rozmiary Siatki
+Aplikacja powinna oferować następujące rozmiary siatki:
+- 10x10 kubeczków
+- 12x12 kubeczków
+- 14x14 kubeczków
+- 16x16 kubeczków
+- 18x18 kubeczków
+- 20x20 kubeczków
 
-Potrzebne były by też  warunki uniemożliwiające wstawienie kubeczka niezgodnie z prawami fizyki czyli:
+### 2. Interfejs Użytkownika
 
-- Kubeczek z wyższej warstwy na polach bezpośrednio nad kubeczkiem musi być postawiony odwrotnie ( bo by wpadł)
-- Kubeczek z wyższej warstwy nie może być ustawiony szerzej niż dolna warstwa ( wieża nie może się rozszerzać)
+#### 2.1 Pasek Kubeczków
+- Umieszczenie 10 grafik kubeczków w różnych kolorach
+- Możliwość wyboru aktywnego kubeczka do umieszczenia na siatce
+- Grafiki kubeczków z folderu `/images`
 
- 
-Chodzi o możliwość fizycznego odwzorowania układu kubeczkami
+#### 2.2 Siatka Projektowa
+- Niewidoczne linie siatki
+- Pola połówkowe umożliwiające:
+  * Ustawienie kubeczka między polami dolnej warstwy
+  * Zachowanie możliwości układania kubeczków jeden nad drugim
+
+### 3. Zasady Fizycznego Układania
+
+#### 3.1 Reguły Ustawiania Kubeczków
+- Kubeczki w sąsiednich rzędach muszą być ustawiane na przemian
+- Każdy kubeczek z wyższej warstwy musi być odwrócony w stosunku do kubeczka poniżej
+- Piramida nie może się rozszerzać (kubeczki wyższej warstwy nie mogą być szersze niż warstwy poniżej)
+
+#### 3.2 Przykładowe Wzorce Piramid
+- Możliwość tworzenia piramid o kształtach:
+  * Klasyczna: np. 4-3-2-1
+  * Dowolne konfiguracje zgodne z regułami fizyki
+
+### 4. Funkcje Dodatkowe
+
+#### 4.1 Eksport
+- Eksport projektu do pliku PDF
+-Czytelny wydruk pozwalający na odtworzenie projektu fizycznie
+
+#### 4.2 Interfejs
+- Pełny interfejs w języku polskim
+- Intuicyjna nawigacja
+- Komunikaty i instrukcje po polsku
+
+## Technologie Rekomendowane
+- Vanilla JavaScript
+- Konva https://konvajs.org/docs/index.html
+- Biblioteka do generowania PDF
+- Responsywny design
+
+## Proponowane Etapy Implementacji
+
+1. Przygotowanie grafik kubeczków
+2. WAŻNE !! Powinienem móc zbudować piramidę, a kubeczki powinny być wyrównane. np. 4-3-2-1
+3. Implementacja logiki dodawania kubeczków
+4. Dodanie walidacji fizycznego układania
+5. Implementacja eksportu do PDF
+6. Testy i optymalizacja
+7. Dodanie instrukcji użycia
+
+## Wytyczne Projektowe
+- Minimalistyczny, przejrzysty interfejs
+- Duży kontrast kolorów
+- Czytelne komunikaty
+- Proste i intuicyjne mechanizmy dodawania/usuwania
+
+## Dodatkowe Uwagi
+- Należy zwrócić szczególną uwagę na logikę walidacji układania kubeczków.
+- Interfejs powinien być przyjazny dla dzieci
+- Grafiki kubeczków muszą być czytelne i atrakcyjne wizualnie
